<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.test.crowth.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explorer"
        android:name="com.test.crowth.ui.dashboard.ExplorerFragment"
        android:label="@string/title_explorer"
        tools:layout="@layout/fragment_explorer" />

    <fragment
        android:id="@+id/navigation_net"
        android:name="com.test.crowth.ui.notifications.NotificationsFragment"
        android:label="@string/title_net"
        tools:layout="@layout/fragment_notifications" />
</navigation>